--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "storage/temp"
   bin = "./storage/temp/main"
   cmd = "go build -o ./storage/temp/main ."
   delay = 1000
-  exclude_dir = ["storage", "database", "node_modules"]
+  exclude_dir = ["storage", "node_modules", "database"]
   exclude_file = []
   exclude_regex = []
   exclude_unchanged = false
